--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "razorpay": "^2.0.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {},
